--- a/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Appendix A Title Appendix Subtitle</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="backmatter">
+	<body epub:type="backmatter">
 		<section epub:type="appendix" id="P70004858060007A3">
+			<span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"/><span epub:type="label">Appendix </span><span epub:type="ordinal">A</span> Title</h1>
+				<h1 epub:type="title"><span epub:type="label">Appendix</span>
+					<span epub:type="ordinal">A</span> Title</h1>
 				<p epub:type="subtitle">Appendix Subtitle</p>
 			</header>
 			<section id="P70004858060007A5" class="level2">
 				<header>
-					<h2 epub:type="title"><span epub:type="label">Appendix Section</span></h2>
+					<h2 epub:type="title">Appendix Section</h2>
 				</header>
-				<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
-				
+				<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is
+					Appendix Body Text. This is Appendix Body Text. </p>
 				<section id="P70004858060007A6" class="level3">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1 </span><span epub:type="label">Subsection</span></h3>
+						<h3 epub:type="title">1 Subsection</h3>
 					</header>
-					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
+					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is
+						Appendix Body Text. This is Appendix Body Text. </p>
 					<ul>
 						<li>
 							<p>This is Appendix unorderedlist item text (should appear as bulleted)</p>
@@ -32,7 +36,7 @@
 							<p>This is Appendix unorderedlist item text (should appear as bulleted)</p>
 						</li>
 					</ul>
-					<div class="listgroup" id="d6e7085">
+					<div id="d6e7085">
 						<p epub:type="title">This is a list title</p>
 						<ol>
 							<li>
@@ -43,7 +47,8 @@
 							</li>
 						</ol>
 					</div>
-					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
+					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is
+						Appendix Body Text. This is Appendix Body Text. </p>
 				</section>
 			</section>
 		</section>
