--- a/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
@@ -10,8 +10,8 @@
 	</head>
 	<body epub:type="bodymatter">
 		<section epub:type="chapter" id="P70004858060006F9">
+			<span title="5" epub:type="pagebreak" id="P70004858060006FA"></span>
 			<header>
-				<span class="pagebreak" title="5" epub:type="pagebreak" id="P70004858060006FA"></span>
 				<h1 epub:type="title"><span epub:type="label">Chapter</span>
 					<span epub:type="ordinal">2:</span> Asides</h1>
 			</header>
@@ -288,10 +288,10 @@
 							pullquote text. This is pullquote text. This is pullquote text. This is pullquote
 							text.</p></aside>
 					<p>This is normal body text following the pullquote. This is normal body text following the
-							pullquote.<span class="pagebreak" title="6" epub:type="pagebreak" id="P7000485806000715"
-						></span></p>
+							pullquote.</p>
 				</section>
 				<section id="P7000485806000716" class="level1">
+					<span title="6" epub:type="pagebreak" id="P7000485806000715"></span>
 					<header>
 						<h3 epub:type="title">1.6 Annotation</h3>
 					</header>
