--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -8,10 +8,10 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="bodymatter">
+	<body epub:type="bodymatter">
 		<section epub:type="chapter" id="P700048580600075C">
+			<span title="16" epub:type="pagebreak" id="P700048580600075D"></span>
 			<header>
-				<span class="pagebreak" title="16" epub:type="pagebreak" id="P700048580600075D"></span>
 				<h1 epub:type="title"><span epub:type="label">Chapter</span>
 					<span epub:type="ordinal">4:</span> Typical Chapter Frontmatter and Chapter Backmatter Content </h1>
 				<p epub:type="subtitle">Chapter 4 Subtitle</p>
@@ -25,8 +25,8 @@
 					<div class="source"><p>Glenn Gould</p></div>
 				</div>
 				<section epub:type="introduction" id="P700048580600075E" class="level1">
+					<span title="17" epub:type="pagebreak" id="P700048580600075F"></span>
 					<header>
-						<span class="pagebreak" title="17" epub:type="pagebreak" id="P700048580600075F"></span>
 						<h3 epub:type="title">4.1 Introduction Section Label</h3>
 					</header>
 					<p>Text in the part or chapter frontmatter that provides a narrative introduction to the part
@@ -42,14 +42,14 @@
 					<header>
 						<h3 epub:type="title">4.2 Learning Objectives Section Label</h3>
 					</header>
-					<ol class="objectivelist">
-						<li class="objective" epub:type="learning-objective" id="P7000485806000761"><p>This
+					<ol>
+						<li epub:type="learning-objective" id="P7000485806000761"><p>This
 								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li class="objective" epub:type="learning-objective" id="P7000485806000762"><p>This
+						<li epub:type="learning-objective" id="P7000485806000762"><p>This
 								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li class="objective" epub:type="learning-objective" id="P7000485806000763"><p>This
+						<li epub:type="learning-objective" id="P7000485806000763"><p>This
 								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li class="objective" epub:type="learning-objective" id="P7000485806000764"><p>This
+						<li epub:type="learning-objective" id="P7000485806000764"><p>This
 								objective listitem should be numbered. The numbers are not specially styled.</p></li>
 					</ol>
 				</section>
@@ -76,7 +76,7 @@
 						bodymatter. This is regular body text in chapter bodymatter.</p>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
-					<section class="example" id="d6e5641">
+					<section id="d6e5641">
 						<header>
 							<h4 epub:type="title">4.4.1 Example 1</h4>
 						</header>
@@ -89,11 +89,10 @@
 							monetary fine is the appropriate punishment for these offenses, not imprisonment. The
 							commission wants to know, “How high should the fine be?”</p>
 					</section>
-					<section class="feature" id="P7000485806000767">
+					<section id="P7000485806000767">
+						<span title="18" epub:type="pagebreak" id="P7000485806000768"></span>
 						<header>
-							<h4 epub:type="title">4.4.2 Feature Section <span class="pagebreak" title="18"
-									epub:type="pagebreak" id="P7000485806000768"></span>
-							</h4>
+							<h4 epub:type="title">4.4.2 Feature Section</h4>
 						</header>
 						<p>A feature is a section in the main narrative that does not float but is typically
 							visually set off from the running text.</p>
@@ -116,7 +115,7 @@
 						</section>
 					</section>
 				</section>
-				<section class="feature" id="P700048580600076A">
+				<section id="P700048580600076A">
 					<header>
 						<h3 epub:type="title">4.5A Feature Section at different level</h3>
 					</header>
@@ -162,46 +161,10 @@
 					</blockquote>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
-					<div class="displayedtext">
-						<p>This is displayed text and should set distinctly from regular body text. This is
-							displayed text and should set distinctly from regular body text.</p>
-					</div>
-					<p class="continued">This is regular body text that continues previous paragraph in chapter
-						bodymatter. This is regular body text that continues previous paragraph in chapter
-						bodymatter. This is regular body text that continues previous paragraph in chapter
-						bodymatter. </p>
-				</section>
-				<section id="d6e5771" class="level1">
-					<header>
-						<h3 epub:type="title">4.7 Poem</h3>
-					</header>
-					<div class="poem">
-						<div class="linegroup">
-							<div class="line"><p>There is a quietness that comes</p></div>
-							<div class="line"><p>in the awareness of presenting names</p></div>
-							<div class="line"><p>and recalling places</p></div>
-							<div class="line"><p>in the history of persons</p></div>
-							<div class="line"><p>who come seeking help.</p></div>
-							<div class="line"><p>Confusion and direction are a part of the process</p></div>
-							<div class="line"><p>where in trying to sort out tracks</p></div>
-							<div class="line"><p>that parallel into life</p></div>
-							<div class="line"><p>a person’s past is traveled.</p></div>
-							<div class="line"><p>Counseling is a complex riddle</p></div>
-							<div class="line"><p>where the mind’s lines are joined</p></div>
-							<div class="line"><p>with scrambling and precision</p></div>
-							<div class="line"><p>to make sense out of nonsense,</p></div>
-							<div class="line"><p>a tedious process</p></div>
-							<div class="line"><p>like piecing fragments of a puzzle together</p></div>
-							<div class="line"><p>until a picture is formed.</p></div>
-							<div class="source"><p>Reprinted from “<cite>In the Midst of the Puzzles and Counseling
-										Journey</cite>,” by S. T. Gladding, 1978, Personnel and Guidance Journal, 57, p.
-									148. © S. T. Gladding. </p></div>
-						</div>
-					</div>
 				</section>
 				<section id="P700048580600076D" class="level1">
 					<header>
-						<h3 epub:type="title">4.8 <img class="inline" width="28" height="13"
+						<h3 epub:type="title">4.7 <img class="inline" width="28" height="13"
 								src="../images/study.jpg" alt="" />Misc Other Structures</h3>
 					</header>
 					<section id="P700048580600076E" class="level2">
@@ -240,38 +203,6 @@
 								experience as told by the people who have lived and are living that experience.</p>
 						</div>
 					</section>
-					<section id="P700048580600076F" class="level2">
-						<header>
-							<h4 epub:type="title">Essay</h4>
-						</header>
-						<p>Used to represent an example essay.</p>
-						<div class="essay">
-							<p>This is example essay text. This is example essay text. This is example essay text.
-								This is example essay text.</p>
-							<p>This is example essay text. This is example essay text. This is example essay text.
-								This is example essay text.</p>
-							<p>This is example essay text. This is example essay text. This is example essay text.
-								This is example essay text.</p>
-						</div>
-					</section>
-					<section id="P7000485806000770" class="level2">
-						<header>
-							<h4 epub:type="title">pre</h4>
-						</header>
-						<p>pre is used when whitespace is important and is to be preserved for a block a
-							preformatted text.</p>
-						<pre><samp>This text is marked as samp within pre: You are in an open field west of a big white house with a boarded
-front door.
-There is a small mailbox here.
-
-</samp> <kbd>this text is marked as kbd within pre</kbd>
-
-<samp>this text is marked as samp within pre
-
-</samp>
-This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
-</pre>
-					</section>
 					<section epub:type="notice" id="P7000485806000771">
 						<header>
 							<h4 epub:type="title">Notice</h4>
@@ -288,40 +219,10 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 							<li><p>This is a listitem</p></li>
 						</ol>
 					</section>
-					<section id="P7000485806000772" class="letter level2">
-						<header>
-							<h4 epub:type="title">Letter</h4>
-						</header>
-						<p> letter is a specific type of example.</p>
-						<p>This is letter text. This is letter text. This is letter text. This is letter text. This
-							is letter text. </p>
-						<ol>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-						</ol>
-					</section>
-					<section id="P7000485806000773" class="read level2">
-						<header>
-							<h4 epub:type="title">Read</h4>
-						</header>
-						<p>A read is a reading, typically a literary work (e.g., short story).</p>
-						<p>This is reading text. This is reading text. This is reading text. This is reading text.
-							This is reading text. This is reading text. This is reading text. </p>
-						<p>This is reading text. This is reading text. This is reading text. This is reading text.
-							This is reading text. This is reading text. This is reading text. </p>
-						<ol>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-						</ol>
-						<p>This is reading text. This is reading text. This is reading text. This is reading text.
-							This is reading text. This is reading text. This is reading text. </p>
-					</section>
 				</section>
 				<section id="P7000485806000774" class="level1">
 					<header>
-						<h3 epub:type="title">4.9 Misc</h3>
+						<h3 epub:type="title">4.8 Misc</h3>
 					</header>
 					<p>Numbered equation using MathML</p>
 					<div class="equation">
@@ -353,10 +254,10 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 					</div>
 				</section>
 			</section>
-			<section class="backmatter" id="d6e6104" aria-label="Chapter back">
-				<section epub:type="conclusion" id="P7000485806000775" class="conclusion level1">
+			<section id="d6e6104" aria-label="Chapter back">
+				<section epub:type="conclusion" id="P7000485806000775" class="level1">
 					<header>
-						<h3 epub:type="title">4.10 Conclusion Section</h3>
+						<h3 epub:type="title">4.9 Conclusion Section</h3>
 					</header>
 					<p>Container for summary of key points of chapter.</p>
 					<p>Now that you have studied this chapter, you can do the following:</p>
@@ -417,7 +318,7 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 				</section>
 				<section epub:type="answers" id="P7000485806000777" class="level1">
 					<header>
-						<h3 epub:type="title">4.11 Answers</h3>
+						<h3 epub:type="title">4.10 Answers</h3>
 					</header>
 					<p>answerlist is an orderedlist that contains answers to questions posed in assessment
 						sections.</p>
@@ -436,38 +337,10 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 					<p>Note that the sublist is not setting on same line as top-level answerlist (i.e., 26.1 sets
 						on line of its own). Current CSS is not expecting a listitem to contain a number whose only
 						content is a nested list</p>
-					<section epub:type="answers" id="P70004858060006EF" class="level2">
-						<header>
-							<h4 epub:type="title">4.11.1 Nested Answersetdiv Section </h4>
-						</header>
-						<ol class="dynamiclist">
-							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
-									section.</p></li>
-							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
-									section.</p></li>
-							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
-									section.</p></li>
-							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
-									section.</p></li>
-						</ol>
-					</section>
-					<section epub:type="answers" id="P70004858060006F0" class="level2">
-						<header>
-							<h4 epub:type="title">4.11.2 Nested Answersetdiv Section </h4>
-						</header>
-						<ol class="dynamiclist">
-							<li><p>1.1 This is answerlist text in a nested section. This is answerlist text in a
-									nested section.</p></li>
-							<li><p>1.2 This is answerlist text in a nested section. This is answerlist text in a
-									nested section.</p></li>
-							<li><p>1.3 This is answerlist text in a nested section. This is answerlist text in a
-									nested section.</p></li>
-						</ol>
-					</section>
 				</section>
 				<section epub:type="practice" id="P7000485806000778" class="level1">
 					<header>
-						<h3 epub:type="title" id="P7000485806000779">4.12 Exercises</h3>
+						<h3 epub:type="title" id="P7000485806000779">4.11 Exercises</h3>
 					</header>
 					<p>A container for assessment content, including optional title group, introductory text,
 						instructions, and problems.</p>
@@ -504,13 +377,12 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 							</div>
 						</li>
 					</ol>
-					<section epub:type="practices" id="P7000485806001456" class="level2">
+					<section epub:type="practice" id="P7000485806001456" class="level2">
 						<header>
-							<h4 epub:type="title">4.12.1 Practice Subsection</h4>
+							<h4 epub:type="title">4.11.1 Practice Subsection</h4>
 						</header>
 						<ol>
-							<li epub:type="general-problem"><p>This is a general-problem that is auto-numbered by reading
-									system appearing in a nested subsection</p></li>
+							<li><p>This is a general-problem that is auto-numbered</p></li>
 							<li epub:type="match-problem" id="P70004858060006E6">
 								<div epub:type="question"><table>
 										<tr>
@@ -530,7 +402,7 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3 epub:type="title">4.13 Keywords </h3>
+						<h3 epub:type="title">4.12 Keywords </h3>
 					</header>
 					<p>Keywordset is a container of the list of keywords used in the chapter. Keywords in the
 						keyword list link back to keywords in the body text. Keywords in body text in turn map to
@@ -553,14 +425,6 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 					<p>The keywords above should render as bold and with design icon. Clicking on each keyword in
 						keylist will resolve to keyword in body text example in <a
 							href="name-index.xhtml#P70004858060007CF">Chapter 4</a>.</p>
-				</section>
-				<section id="P700048580600077B" class="level1">
-					<header>
-						<h3 epub:type="title">4.14 Title</h3>
-						<p epub:type="subtitle">Subtitle text subtitle text</p>
-					</header>
-					<p>This is horizontal rule</p>
-					<hr />
 				</section>
 			</section>
 		</section>
