--- a/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
@@ -8,10 +8,10 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="bodymatter">
+	<body epub:type="bodymatter">
 		<section epub:type="chapter" id="P700048580600071E">
+			<span title="7" epub:type="pagebreak" id="P700048580600071F"></span>
 			<header>
-				<span class="pagebreak" title="7" epub:type="pagebreak" id="P700048580600071F"></span>
 				<h1 epub:type="title"><span epub:type="label">Chapter</span>
 					<span epub:type="ordinal">2:</span> Figures and Tables</h1>
 			</header>
@@ -25,14 +25,14 @@
 						main flow, e.g. to the side of the page, or to dedicated pages.</p>
 					<p>Although the primary content of a figure is usually a graphic, the contents of a figure may
 						also be textual or tabular.</p>
-					<figure class="figure" id="P7000485806000721">
+					<figure id="P7000485806000721">
 						<img alt="alternative text" width="705" height="399" src="../images/fxvii-01.png" />
 						<figcaption>
 							<p epub:type="title">Figure 3.1 Figure Title</p>
-							<div class="caption"><p>This is caption text. This is caption text. This is caption text.
+							<div><p>This is caption text. This is caption text. This is caption text.
 									This is caption text. This is caption text. This is caption text. This is caption
 									text. This is caption text.</p></div>
-							<div class="source"><p>This is source text <cite>This is citation text</cite>.</p></div>
+							<div><p>This is source text <cite>This is citation text</cite>.</p></div>
 						</figcaption>
 					</figure>
 				</section>
@@ -42,19 +42,19 @@
 					</header>
 					<p>informalfigure is a class of figure that floats, is not referenced in the text, is usually a
 						photograph, and is un-numbered.</p>
-					<figure class="informalfigure" id="P7000485806000723">
+					<figure id="P7000485806000723">
 						<img
 							alt="A color-coded map shows the location of nine major Indian groups and culture areas in North America in the 1600s. An inset map shows the Aztec and Maya in Central America and the Inca in South America."
 							width="550" height="319" src="../images/f0007-01.jpg" />
 						<figcaption>
-							<p class="title">The First Americans</p>
-							<p class="subtitle">Location Of Major Indian Groups And Culture Areas In The 1600S</p>
-							<div class="caption">
+							<p epub:type="title">The First Americans</p>
+							<p epub:type="subtitle">Location Of Major Indian Groups And Culture Areas In The 1600S</p>
+							<div>
 								<p>Native Americans had complex social structures, religious systems, and
 									sophisticated agricultural techniques before they came into contact with
 									Europeans.</p>
 							</div>
-							<details class="longdesc" id="P7000485806000724">
+							<details id="P7000485806000724">
 								<summary>Description</summary>
 								<p>Data are provided in the following table.</p>
 								<table>
@@ -134,9 +134,9 @@
 					<p>inline is a special class of figure that is required to be placed inline with running text,
 						is always titled or captioned, is a graphic, and is not labeled or numbered. When a graphic
 						is used alone with no caption, use the img element</p>
-					<figure class="inline" id="d2e3535">
+					<figure id="d2e3535">
 						<img alt="signature" height="33" width="200" src="../images/AAHQPRT0.jpg" />
-						<figcaption><div class="caption"><p>MINITAB Output</p></div></figcaption></figure>
+						<figcaption><p>MINITAB Output</p></figcaption></figure>
 				</section>
 				<section id="P7000485806000726" class="level1">
 					<header>
@@ -146,7 +146,7 @@
 						often specially positioned relative to a design. It does not arbitrarily float, nor is it
 						always inline. It often has a designated special position within the overall opening
 						layout.</p>
-					<figure class="opener" id="P7000485806000727">
+					<figure id="P7000485806000727">
 						<img alt="wind turbines in ocean" width="366" height="600" src="../images/ch27_f0018-01.jpg"
 						 />
 					</figure>
@@ -156,12 +156,12 @@
 						<h3 epub:type="title">2.5 Figure containing a Table</h3>
 					</header>
 					<p>When a table can float away from its main content without affecting flow or understanding of
-						that content, table must be nested in figure with class="table". when table is nested inside
+						that content, table must be nested in figure. when table is nested inside
 						of figure, the table title, caption, and source is coded as belonging to the containing
 						figure</p>
-					<figure class="table" id="P7000485806000729">
+					<figure id="P7000485806000729">
 						<figcaption>
-							<p class="title">Table 2.1 Table Title</p>
+							<p epub:type="title">Table 2.1 Table Title</p>
 						</figcaption>
 						<table>
 							<tbody>
@@ -184,14 +184,14 @@
 							</tbody>
 						</table>
 					</figure>
-					<figure class="table" id="P700048580600072A">
+					<figure id="P700048580600072A">
 						<figcaption>
-							<p class="title">Table 3.2 Kirton Adaption-Innovation Inventory</p>
-							<div class="caption">
+							<p epub:type="title">Table 3.2 Kirton Adaption-Innovation Inventory</p>
+							<div>
 								<p>The following questions are about your style of work behavior (e.g., decision
 									making) in your organization. Please respond to the question based on your
 									assessment of yourself. Please read all the questions first, and then respond.</p>
-								<ul class="ul_none">
+								<ul class="nomark">
 									<li><p>1 = Not at all (NA)</p></li>
 									<li><p>2 = To a slight extent (SE)</p></li>
 									<li><p>3 = To a moderate extent (ME)</p></li>
@@ -200,13 +200,13 @@
 								</ul>
 							</div>
 						</figcaption>
-						<table class="largetable" id="P700048580600072B">
+						<table id="P700048580600072B">
 							<tfoot>
 								<tr>
 									<td colspan="6">
-										<div class="source">
-											<p><span class="pagebreak" title="8" epub:type="pagebreak"
-													id="P700048580600072C"></span>Source: Monavvarrian, A. 2004.
+										<div>
+											<span title="8" epub:type="pagebreak" id="P700048580600072C"></span>
+											<p>Source: Monavvarrian, A. 2004.
 												Administrative reform and style of work behavior: Adaptors-innovators,
 													<cite>Public Organization Review: A Global Journal</cite> 2:
 												141–164.</p>
@@ -489,8 +489,8 @@
 					</header>
 					<p>An informaltable is a table that must be set inline to the running text. It is typically
 						un-numbered.</p>
-					<table class="informaltable largetable" id="P700048580600072E">
-						<caption><div class="caption"><p>This is the un-numbered table's caption</p></div></caption>
+					<table id="P700048580600072E">
+						<caption><p>This is the un-numbered table's caption</p></caption>
 						<thead>
 							<tr>
 								<th scope="col">Column Heading Text</th>
@@ -553,7 +553,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td><span class="pagebreak" title="9" epub:type="pagebreak" id="P700048580600072F"
+								<td><span title="9" epub:type="pagebreak" id="P700048580600072F"
 									></span> 5 </td>
 								<td>
 									<ul>
@@ -733,24 +733,6 @@
 						<h3 epub:type="title">2.7 Image</h3>
 					</header>
 					<p>An inline image with no caption is simply coded as image</p>
-					<section class="procedure" id="d6e4875" aria-label="procedure">
-						<ol class="steplist">
-							<li class="step"><p><span class="leadin">This is text marked as leadin, which will format
-										as bold and italic in current CSS</span>. This is normal text.</p>
-								<p><img width="762" height="284" src="../images/f0244-01.png" alt="choice diagram"
-									 /></p></li>
-							<li class="step"><p><span class="leadin">This is text marked as leadin, which will format
-										as bold and italic in current CSS</span>. This is normal text:</p>
-								<p><img width="762" height="752" src="../images/f0245-01.png" alt="choice diagram"
-									 /></p></li>
-							<li class="step"><p><span class="leadin">This is text marked as leadin, which will format
-										as bold and italic in current CSS </span> This is normal text.</p>
-								<p><img width="762" height="934" src="../images/f0246-01.png" alt="choice diagram"
-									 /></p></li>
-							<li class="step"><p><span class="leadin">This is text marked as leadin, which will format
-										as bold and italic in current CSS </span>. This is normal text.</p></li>
-						</ol>
-					</section>
 				</section>
 			</section>
 		</section>
