--- a/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Half Titlepage Title</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,9 +9,10 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<section epub:type="halftitlepage" id="d6e189" class="halftitlepage level1">
+		<section epub:type="halftitlepage" id="d6e189" class="level1">
+			<span title="ii" epub:type="pagebreak" id="P7000485806000692"></span>
 			<header epub:type="fulltitle">
-				<h1 epub:type="title"><span class="pagebreak" title="ii" epub:type="pagebreak" id="P7000485806000692"/>Half Titlepage Title</h1>
+				<h1 epub:type="title">Half Titlepage Title</h1>
 			</header>
 		</section>
 	</body>
