--- a/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Bibliography</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="backmatter">
-		<section epub:type="bibliography" id="P70004858060007A7"><header><h1 epub:type="title"><span class="pagebreak" title="21" epub:type="pagebreak" id="P7000485806000938"/><span epub:type="label">Bibliography</span></h1></header>
-			<section id="P70004858060007A8" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span epub:type="ordinal">1</span></h2></header>
-				<ol class="biblioentrylist">
-					<li epub:type="biblioentry" id="P70004858060007A9"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
-					<li epub:type="biblioentry" id="P70004858060007AA"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
-					<li epub:type="biblioentry" id="P70004858060007AB"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
+	<body epub:type="backmatter">
+		<section epub:type="bibliography" id="P70004858060007A7">
+			<span class="pagebreak" title="21" epub:type="pagebreak" id="P7000485806000938"></span>
+			<header>
+				<h1 epub:type="title">Bibliography</h1>
+			</header>
+			<section id="P70004858060007A8" class="level2"><header>
+				<h2 epub:type="title">Chapter 1</h2>
+			</header>
+				<ol class="nomark">
+					<li epub:type="biblioentry" id="P70004858060007A9"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
+					<li epub:type="biblioentry" id="P70004858060007AA"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
+					<li epub:type="biblioentry" id="P70004858060007AB"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
 				</ol>
 			</section>
-			<section id="P70004858060007AC" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span epub:type="ordinal">4</span></h2></header>
-				<ol class="biblioentrylist">
-					<li epub:type="biblioentry" id="P70004858060007AD"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
-					<li epub:type="biblioentry" id="P70004858060007AE"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
-					<li epub:type="biblioentry" id="P70004858060007AF"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
+			<section id="P70004858060007AC" class="level2">
+				<header>
+					<h2 epub:type="title">Chapter 4</h2>
+				</header>
+				<ol class="nomark">
+					<li epub:type="biblioentry" id="P70004858060007AD"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
+					<li epub:type="biblioentry" id="P70004858060007AE"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
+					<li epub:type="biblioentry" id="P70004858060007AF"><p>This is biblioentry text. It should
+							appear as un-numbered.</p></li>
 				</ol>
 			</section>
-		</section></body>
+		</section>
+	</body>
 </html>
