--- a/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Copyright Page</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -9,10 +10,11 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="d6e264" epub:type="copyright-page" class="level1">
+			<span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"/>Copyright Page</h1>
+				<h1 epub:type="title">Copyright Page</h1>
 			</header>
-			<table class="informaltable" id="P7000485806000694">
+			<table id="P7000485806000694">
 				<tbody>
 					<tr>
 						<th scope="row"><span class="strong">Vice President/Editor-in-Chief:</span></th>
@@ -53,18 +55,29 @@
 				</tbody>
 			</table>
 			<section id="P7000485806000696" epub:type="other-credits" aria-label="credits and copyright">
-				<p>Credits and acknowledgments borrowed from other sources and reproduced, with permission, in this textbook appear on appropriate page within.</p>
-				<p>Copyright © 2012, 2008, 2004, 2002 Pearson Education, Inc., 501 Boylston Street, Boston, MA, 02116. All rights reserved. Manufactured in the United States of America. This publication is protected by Copyright, and permission should be obtained from the publisher prior to any prohibited reproduction, storage in a retrieval system, or transmission in any form or by any means, electronic, mechanical, photocopying, recording, or likewise. To obtain permission(s) to use material from this work, please submit a written request to Pearson Education, Inc., Permissions Department, 501 Boylston Street, Boston, MA, 02116, or email <a class="email" href="mailto:permissionsus@pearson.com">permissionsus@pearson.com</a>.</p>
+				<p>Credits and acknowledgments borrowed from other sources and reproduced, with permission, in
+					this textbook appear on appropriate page within.</p>
+				<p>Copyright © 2012, 2008, 2004, 2002 Pearson Education, Inc., 501 Boylston Street, Boston, MA,
+					02116. All rights reserved. Manufactured in the United States of America. This publication is
+					protected by Copyright, and permission should be obtained from the publisher prior to any
+					prohibited reproduction, storage in a retrieval system, or transmission in any form or by any
+					means, electronic, mechanical, photocopying, recording, or likewise. To obtain permission(s) to
+					use material from this work, please submit a written request to Pearson Education, Inc.,
+					Permissions Department, 501 Boylston Street, Boston, MA, 02116, or email <a class="email"
+						href="mailto:permissionsus@pearson.com">permissionsus@pearson.com</a>.</p>
 			</section>
 			<section id="P7000485806000697" aria-label="cataloging">
 				<p><span class="strong">Library of Congress Cataloging-in-Publication Data</span></p>
 				<p>Herrell, Adrienne L.</p>
-				<p>50 strategies for teaching English language learners / Adrienne L. Herrell, Michael Jordan.—4th ed.</p>
+				<p>50 strategies for teaching English language learners / Adrienne L. Herrell, Michael Jordan.—4th
+					ed.</p>
 				<p>p. cm.</p>
 				<p>Rev. ed. of: Fifty strategies for teaching English language learners</p>
 				<p>ISBN-13: 978-0-13-248750-4</p>
 				<p>ISBN-10: 0-13-248750-0</p>
-				<p>1. English language—Study and teaching—Foreign speakers. I. Jordan, Michael, II. Herrell, Adrienne L. Fifty strategies for teaching English language learners. III. Title. IV. Title: Fifty strategies for teaching English language learners.</p>
+				<p>1. English language—Study and teaching—Foreign speakers. I. Jordan, Michael, II. Herrell,
+					Adrienne L. Fifty strategies for teaching English language learners. III. Title. IV. Title:
+					Fifty strategies for teaching English language learners.</p>
 				<p>PE1128.A2H467 2012</p>
 				<p>428.2′4071—dc22</p>
 				<p>2010048486</p>
