--- a/samples/structure-sample-01/EPUB/xhtml/cover.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/cover.xhtml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Cover</title>
 		<style type="text/css">
 			img{
-				max-height:95%;
-				max-width:95%
+			   max-height:95%;
+			   max-width:95%
 			}</style>
 	</head>
 	<body epub:type="cover" aria-label="cover">
