--- a/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Credits</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed">
-		<section class="creditset" epub:type="credits" id="P70004858060007D6">
+	<body>
+		<section epub:type="credits" id="P70004858060007D6">
+			<span class="pagebreak" title="26" epub:type="pagebreak" id="P7000485806000988"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="26" epub:type="pagebreak" id="P7000485806000988"/><span epub:type="label">Credits</span><a id="P70004858060007D7"></a></h1>
+				<h1 epub:type="title" id="P70004858060007D7">Credits</h1>
 			</header>
-			<section epub:type="credits" id="P70004858060007D8" class="creditsetdiv level2">
+			<section epub:type="credits" id="P70004858060007D8" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007D9"><span epub:type="label">Chapter </span><span epub:type="ordinal">1 </span></h2>
+					<h2 epub:type="title" id="P70004858060007D9">Chapter 1</h2>
 				</header>
-				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
+				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
+					Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
-			<section epub:type="credits" id="P70004858060007DA" class="creditsetdiv level2">
+			<section epub:type="credits" id="P70004858060007DA" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DB"><span epub:type="label">Chapter </span><span epub:type="ordinal">2 </span></h2>
+					<h2 epub:type="title" id="P70004858060007DB">Chapter 2</h2>
 				</header>
-				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
+				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
+					Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
-			<section epub:type="credits" id="P70004858060007DC" class="creditsetdiv level2">
+			<section epub:type="credits" id="P70004858060007DC" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DD"><span epub:type="label">Chapter </span><span epub:type="ordinal">3 </span></h2>
+					<h2 epub:type="title" id="P70004858060007DD">Chapter 3</h2>
 				</header>
-				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
+				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
+					Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
 		</section>
 	</body>
