--- a/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
@@ -7,35 +7,36 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="backmatter">
-		<section epub:type="glossary" id="P70004858060007B0" class="glossary level1">
+	<body epub:type="backmatter">
+		<section epub:type="glossary" id="P70004858060007B0" class="level1">
+			<span class="pagebreak" title="22" epub:type="pagebreak" id="P7000485806000948"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="22" epub:type="pagebreak" id="P7000485806000948"/><span epub:type="label">Glossary</span></h1>
+				<h1 epub:type="title">Glossary</h1>
 			</header>
-			<section id="P70004858060007B1" class="glossdiv level2">
+			<section id="P70004858060007B1" class="level2">
 				<header>
 					<h2 epub:type="title">A</h2>
 				</header>
-				<dl class="glossentrylist">
-					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+				<dl class="nomark">
+					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dt epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dt epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dt epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
 				</dl>
 			</section>
-			<section id="P70004858060007B6" class="glossdiv level2">
+			<section id="P70004858060007B6" class="level2">
 				<header>
 					<h2 epub:type="title">B</h2>
 				</header>
