--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -14,7 +14,6 @@
 				<li><a href="halftitle.xhtml#d6e189"> Half Titlepage Title </a></li>
 				<li><a href="titlepage.xhtml#d6e199"> Titlepage Title </a></li>
 				<li><a href="copyright.xhtml#d6e264">Copyright Page</a></li>
-				<li><a href="list-of-sidebars.xhtml#P70004858060006A2">List of sidebars</a></li>
 				<li><a href="about-authors.xhtml#P70004858060006A4"> About the Authors Section </a><ol
 						hidden="hidden"></ol></li>
 				<li><a href="preface.xhtml#P70004858060006A7"> Preface Section </a><ol>
@@ -46,7 +45,7 @@
 								<li><a href="figures-tables.xhtml#P7000485806000726">2.4 Chapter or Part Opening
 										Figure</a></li>
 								<li><a href="figures-tables.xhtml#P7000485806000728">2.5 Figure containing a
-										Table</a></li>
+									Table</a></li>
 								<li><a href="figures-tables.xhtml#P700048580600072D">2.6 Informaltable</a></li>
 								<li><a href="figures-tables.xhtml#P7000485806000730">2.7 Image</a></li>
 							</ol></li>
@@ -72,7 +71,7 @@
 								and Chapter Backmatter Content <span class="subtitle">Chapter 6 Subtitle</span>
 							</a><ol>
 								<li><a href="body-content.xhtml#P700048580600075E">4.1 Introduction Section
-										Label</a></li>
+									Label</a></li>
 								<li><a href="body-content.xhtml#P7000485806000760"> 4.2 Learning Objectives Section
 										Label </a></li>
 								<li><a href="body-content.xhtml#P7000485806000766">4.3 Case Study Case Study Title
@@ -84,32 +83,26 @@
 														heading</a></li>
 											</ol></li>
 									</ol></li>
-								<li><a href="body-content.xhtml#P700048580600076A"> 4.5A Feature Section at different
+								<li><a href="body-content.xhtml#P700048580600076A"> 4.5 Feature Section at different
 										level </a><ol>
 										<li><a href="body-content.xhtml#P700048580600076C"> feature section
-												heading</a></li>
+											heading</a></li>
 									</ol></li>
 								<li><a href="body-content.xhtml#d6e5727">4.6 Blockquotes</a></li>
-								<li><a href="body-content.xhtml#d6e5771">4.7 Poem</a></li>
-								<li><a href="body-content.xhtml#P700048580600076D">4.8 Misc Other Structures</a><ol
+								<li><a href="body-content.xhtml#P700048580600076D">4.7 Misc Other Structures</a><ol
 										hidden="hidden">
 										<li><a href="body-content.xhtml#P700048580600076E"> Abstract</a><ol
 												hidden="hidden"></ol></li>
-										<li><a href="body-content.xhtml#P700048580600076F"> Essay</a></li>
-										<li><a href="body-content.xhtml#P7000485806000770"> pre</a></li>
 									</ol></li>
-								<li><a href="body-content.xhtml#P7000485806000774">4.9 Misc</a></li>
-								<li><a href="body-content.xhtml#P7000485806000775">4.10 Conclusion Section</a><ol
+								<li><a href="body-content.xhtml#P7000485806000774">4.8 Misc</a></li>
+								<li><a href="body-content.xhtml#P7000485806000775">4.8 Conclusion Section</a><ol
 										hidden="hidden">
 										<li><a href="body-content.xhtml#P7000485806000776"> Conclusion sub-section <span
 													class="subtitle">This is the subtitle</span></a></li>
 									</ol></li>
-								<li><a href="body-content.xhtml#P7000485806000777"> 4.11 Answers </a></li>
-								<li><a href="body-content.xhtml#P7000485806000778"> 4.12 Exercises </a></li>
-								<li><a href="body-content.xhtml#P700048580600077A"> 4.13 Keywords </a></li>
-								<li><a href="body-content.xhtml#P700048580600077B"> 4.14 Title <span class="subtitle"
-											>Subtitle text subtitle text</span>
-									</a></li>
+								<li><a href="body-content.xhtml#P7000485806000777"> 4.10 Answers </a></li>
+								<li><a href="body-content.xhtml#P7000485806000778"> 4.11 Exercises </a></li>
+								<li><a href="body-content.xhtml#P700048580600077A"> 4.12 Keywords </a></li>
 							</ol></li>
 					</ol>
 				</li>
@@ -190,7 +183,6 @@
 				<li><a href="copyright.xhtml#P7000485806000695">iv</a></li>
 				<li><a href="dedication.xhtml#P7000485806000698">v</a></li>
 				<li><a href="dedication.xhtml#P7000485806000699">vi</a></li>
-				<li><a href="list-of-illustrations.xhtml#P70004858060006A1">x</a></li>
 				<li><a href="about-authors.xhtml#P70004858060006A5">xi</a></li>
 				<li><a href="about-authors.xhtml#P70004858060006A6">xii</a></li>
 				<li><a href="preface.xhtml#P70004858060006A8">xiii</a></li>
